<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dps12"
            android:contentDescription="@string/logo_gapo"
            android:gravity="center_vertical"
            android:src="@drawable/ic_gapo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dps10"
            android:layout_toEndOf="@id/imgLogo"
            android:gravity="center"
            android:text="Gapo"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgMenu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/dps10"
            android:layout_marginEnd="@dimen/dps12"
            android:contentDescription="@string/menu"
            android:gravity="center_vertical"
            android:src="@drawable/ic_menu" />

        <ImageView
            android:id="@+id/imgSearch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dps10"
            android:layout_toStartOf="@id/imgMenu"
            android:contentDescription="@string/search"
            android:gravity="center_vertical"
            android:src="@drawable/ic_search" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#f5f5f5" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/dps10">

                <ImageView
                    android:layout_width="@dimen/dps40"
                    android:layout_height="@dimen/dps40"
                    android:src="@drawable/avatar" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dps10"
                    android:text="@string/what_do_you_want_to_share"
                    android:textAllCaps="true"
                    android:textSize="@dimen/sps14" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dps10"
                        android:src="@drawable/ic_livestream" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dps10"
                        android:text="@string/live_stream"
                        android:textColor="#26282C"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dps10"
                        android:src="@drawable/ic_galery" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dps10"
                        android:text="@string/nh_video"
                        android:textColor="#26282C"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dps10"
                        android:src="@drawable/ic_vote" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dps10"
                        android:text="@string/b_nh_ch_n"
                        android:textColor="#26282C"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="#f5f5f5" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:background="#f1f2f4"-->
<!--                android:gravity="center_horizontal"-->
<!--                android:orientation="vertical">-->

<!--                <ImageView-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginTop="@dimen/dps22"-->
<!--                    android:src="@drawable/ic_illustration" />-->

<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="Bạn đã xem hết"-->
<!--                    android:textColor="#26282C"-->
<!--                    android:textSize="18sp"-->
<!--                    android:textStyle="bold" />-->

<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginStart="@dimen/dps22"-->
<!--                    android:layout_marginEnd="@dimen/dps22"-->
<!--                    android:gravity="center"-->
<!--                    android:paddingStart="10dp"-->
<!--                    android:paddingEnd="10dp"-->
<!--                    android:text="Đó là tất cả bài viết của tổ chức bạn."-->
<!--                    android:textSize="16sp" />-->

<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginStart="@dimen/dps22"-->
<!--                    android:layout_marginEnd="@dimen/dps22"-->
<!--                    android:gravity="center"-->
<!--                    android:paddingStart="10dp"-->
<!--                    android:paddingEnd="10dp"-->
<!--                    android:text="Làm mới lại để cập nhật bài viết mới"-->
<!--                    android:textSize="16sp" />-->
<!--            </LinearLayout>-->

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</LinearLayout>