<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <ImageView
            android:id="@+id/imgUserPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dps12"
            android:contentDescription="@string/avatar_user"
            android:src="@drawable/avatarpost"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvNameUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dps8"
            android:layout_marginEnd="@dimen/dps12"
            android:text="@string/user_name"
            android:textColor="#26282C"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/imgMore"
            app:layout_constraintStart_toEndOf="@id/imgUserPost"
            app:layout_constraintTop_toTopOf="@id/imgUserPost" />

        <ImageView
            android:id="@+id/imgMore"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/dps12"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_more_hori"
            app:layout_constraintBottom_toBottomOf="@id/tvNameUser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvNameUser" />

        <TextView
            android:id="@+id/tvCreatedTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_ph_t_tr_c"
            android:textSize="@dimen/sps14"
            app:layout_constraintStart_toStartOf="@id/tvNameUser"
            app:layout_constraintTop_toBottomOf="@id/tvNameUser" />

        <ImageView
            android:id="@+id/imgDot"
            android:layout_width="@dimen/dps10"
            android:layout_height="@dimen/dps10"
            android:layout_marginStart="@dimen/dps6"
            android:src="@drawable/ic_dot_point"
            app:layout_constraintBottom_toBottomOf="@id/tvCreatedTime"
            app:layout_constraintStart_toEndOf="@id/tvCreatedTime"
            app:layout_constraintTop_toTopOf="@id/tvCreatedTime" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/dps6"
            android:src="@drawable/ic_privacy"
            app:layout_constraintBottom_toBottomOf="@id/tvCreatedTime"
            app:layout_constraintStart_toEndOf="@id/imgDot"
            app:layout_constraintTop_toTopOf="@id/tvCreatedTime" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView

        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineHeight="@dimen/dps18"
        android:paddingStart="@dimen/dps12"
        android:paddingEnd="@dimen/dps12"
        android:text="@string/lorem"
        android:textColor="#26282C"
        android:textSize="@dimen/sps14" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dps12">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignEnd="@id/view"
            android:layout_alignBottom="@id/view"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" />

        <View
            android:id="@+id/view"
            android:layout_width="2dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:background="@color/white" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignStart="@id/view"
            android:layout_alignBottom="@id/view"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/view"
            android:background="@color/white" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:paddingStart="@dimen/dps12"
        android:paddingEnd="@dimen/dps12">

        <LinearLayout
            android:id="@+id/reaction"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/like" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/clap" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/heart" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="105"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/commentAndShare"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="26"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dps10"
                android:text="Bình luận"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="5"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Chia sẻ"
                android:textSize="16sp" />

        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/dps12"
        android:layout_marginEnd="@dimen/dps12"
        android:background="#E9EAEC" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:src="@drawable/ic_like" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="Thích" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:src="@drawable/ic_comment" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="Bình luận" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:src="@drawable/ic_share" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="Chia sẻ" />

        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/dps12"
        android:layout_marginEnd="@dimen/dps12"
        android:background="#E9EAEC" />
</LinearLayout>